04-deploy-k8s/backend/secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
